# trash_rogaine_solver

./: .clang-format  LICENSE  README.md
cmake/: CMakeLists.txt
src/: main.cpp  solver.cpp  solver.hpp
src/engines/: greedy_engine.cpp  greedy_engine.hpp
src/map/: map.cpp  map.hpp  ocv_image_loader.cpp  ocv_image_loader.hpp  rogaine_map.cpp  rogaine_map.hpp  solver.hpp
src/map/detectors/: trivial_cp_detector.cpp  trivial_cp_detector.hpp
src/map/filters/: target_filter.cpp  target_filter.hpp  water_filter.cpp  water_filter.hpp
src/pathfinders/: Astar_searcher.cpp  Astar_searcher.hpp  graph_traits.hpp
src/pathfinders/boost_graph/: boost_asearch.hpp  boost_grid_graph.hpp  full_linked_graph.hpp
src/pathfinders/legacy/: asearch.hpp
src/utils/: concepts.hpp  exceptions.hpp  logger.hpp
tests/: CMakeLists.txt  astar_tests.cpp
